<resources>
    <string name="app_name">Farras</string>
    <string name="make_your_login">Faça seu login</string>
    <string name="user">Usuário</string>
    <string name="password">Senha</string>
    <string name="signin">Entrar</string>
    <string name="add">Adicionar</string>
    <string name="update">Atualizar</string>
    <string name="search">Buscar</string>
    <string name="exit">Sair</string>
    <string name="in_buiding">Em construção</string>
    <string name="my_events">Meus rolês</string>
    <string name="register_event">Cadastrar rolê</string>
    <string name="update_event">Atualizar rolê</string>
    <string name="new_in_tour">Novo no rolê?</string>
    <string name="create_account"> &#160; Crie uma conta</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="register">Cadastrar</string>
    <string name="event_date">Data</string>
    <string name="event_name">Nome do rolê</string>
    <string name="remember_password">Lembrar login</string>
    <string name="see_map">Ver mapa</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
</resources>
