<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".features.register.RegisterActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_evente_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_date"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/et_event_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/bt_register_event_data"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="46dp"
        android:background="@color/colorPrimary"
        android:hint="@string/register"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_evente_date" />

</androidx.constraintlayout.widget.ConstraintLayout>